<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_back"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/baseline_arrow_back_black_24dp"
        android:title="@string/nav_back"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_home"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/baseline_home_black_24dp"
        android:title="@string/nav_home"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/nav_next"
        android:checkable="true"
        android:enabled="true"
        android:icon="@drawable/baseline_arrow_forward_black_24dp"
        android:title="@string/nav_next"
        android:visible="true"
        app:showAsAction="ifRoom" />
</menu>